lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    IFS

Grammar

Rule 0     S' -> start
Rule 1     start -> LINE
Rule 2     LINE -> IDX ; LINE
Rule 3     LINE -> IFX LINE
Rule 4     LINE -> WHILEX LINE
Rule 5     LINE -> FORX LINE
Rule 6     LINE -> RETURNX ; LINE
Rule 7     LINE -> PRINTX ; LINE
Rule 8     LINE -> BLOCK LINE
Rule 9     LINE -> EMPTY
Rule 10    ONELINE -> IDX ;
Rule 11    ONELINE -> IFX
Rule 12    ONELINE -> WHILEX
Rule 13    ONELINE -> FORX
Rule 14    ONELINE -> RETURNX ;
Rule 15    ONELINE -> PRINTX ;
Rule 16    BLOCK -> { LINE }
Rule 17    EMPTY -> <empty>
Rule 18    IDX -> ID = EXPRESSION
Rule 19    IDX -> ID = MATRIX
Rule 20    IDX -> ID = TABLE
Rule 21    IDX -> ID [ EXPRESSION ] = EXPRESSION
Rule 22    IDX -> ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
Rule 23    IDX -> ID ADDASSIGN EXPRESSION
Rule 24    IDX -> ID ADDASSIGN MATRIX
Rule 25    IDX -> ID ADDASSIGN TABLE
Rule 26    IDX -> ID [ EXPRESSION ] ADDASSIGN EXPRESSION
Rule 27    IDX -> ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
Rule 28    IDX -> ID SUBASSIGN EXPRESSION
Rule 29    IDX -> ID SUBASSIGN MATRIX
Rule 30    IDX -> ID SUBASSIGN TABLE
Rule 31    IDX -> ID [ EXPRESSION ] SUBASSIGN EXPRESSION
Rule 32    IDX -> ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
Rule 33    IDX -> ID MULASSIGN EXPRESSION
Rule 34    IDX -> ID MULASSIGN MATRIX
Rule 35    IDX -> ID MULASSIGN TABLE
Rule 36    IDX -> ID [ EXPRESSION ] MULASSIGN EXPRESSION
Rule 37    IDX -> ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
Rule 38    IDX -> ID DIVASSIGN EXPRESSION
Rule 39    IDX -> ID DIVASSIGN MATRIX
Rule 40    IDX -> ID DIVASSIGN TABLE
Rule 41    IDX -> ID [ EXPRESSION ] DIVASSIGN EXPRESSION
Rule 42    IDX -> ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
Rule 43    ZEROSX -> ZEROS ( EXPRESSION )
Rule 44    ONESX -> ONES ( EXPRESSION )
Rule 45    EYEX -> EYE ( EXPRESSION )
Rule 46    MATRIX -> [ MATRIXINSIDE ]
Rule 47    MATRIX -> MATRIXEXPR
Rule 48    MATRIX -> ZEROSX
Rule 49    MATRIX -> ONESX
Rule 50    MATRIX -> EYEX
Rule 51    MATRIXINSIDE -> TABLE , MATRIXINSIDE
Rule 52    MATRIXINSIDE -> TABLE
Rule 53    TABLE -> [ VALUES ]
Rule 54    VALUES -> EXPRESSION , VALUES
Rule 55    VALUES -> EXPRESSION
Rule 56    MATRIXEXPR -> EXPRESSION DOTADD MATRIXEXPR
Rule 57    MATRIXEXPR -> EXPRESSION DOTSUB MATRIXEXPR
Rule 58    MATRIXEXPR -> EXPRESSION DOTMUL MATRIXEXPR
Rule 59    MATRIXEXPR -> EXPRESSION DOTDIV MATRIXEXPR
Rule 60    MATRIXEXPR -> EXPRESSION '
Rule 61    MATRIXEXPR -> EMPTY
Rule 62    IFX -> IF ( CONDITION ) ONELINE
Rule 63    IFX -> IF ( CONDITION ) BLOCK
Rule 64    IFX -> IF ( CONDITION ) ONELINE ELSE ONELINE
Rule 65    IFX -> IF ( CONDITION ) ONELINE ELSE BLOCK
Rule 66    IFX -> IF ( CONDITION ) BLOCK ELSE ONELINE
Rule 67    IFX -> IF ( CONDITION ) BLOCK ELSE BLOCK
Rule 68    LOOPLINE -> IDX ; LOOPLINE
Rule 69    LOOPLINE -> WHILEX LOOPLINE
Rule 70    LOOPLINE -> FORX LOOPLINE
Rule 71    LOOPLINE -> RETURNX ; LOOPLINE
Rule 72    LOOPLINE -> PRINTX ; LOOPLINE
Rule 73    LOOPLINE -> LOOPBLOCK LOOPLINE
Rule 74    LOOPLINE -> EMPTY
Rule 75    LOOPLINE -> LOOPIFX LOOPLINE
Rule 76    LOOPLINE -> BREAKX ; LOOPLINE
Rule 77    LOOPLINE -> CONTINUEX ; LOOPLINE
Rule 78    ONELOOPLINE -> IDX ;
Rule 79    ONELOOPLINE -> WHILEX
Rule 80    ONELOOPLINE -> FORX
Rule 81    ONELOOPLINE -> RETURNX ;
Rule 82    ONELOOPLINE -> PRINTX ;
Rule 83    ONELOOPLINE -> LOOPIFX
Rule 84    ONELOOPLINE -> BREAKX ;
Rule 85    ONELOOPLINE -> CONTINUEX ;
Rule 86    BREAKX -> BREAK
Rule 87    CONTINUEX -> CONTINUE
Rule 88    LOOPBLOCK -> { LOOPLINE }
Rule 89    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE
Rule 90    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK
Rule 91    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE ONELOOPLINE
Rule 92    LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE LOOPBLOCK
Rule 93    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE ONELOOPLINE
Rule 94    LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE LOOPBLOCK
Rule 95    WHILEX -> WHILE ( CONDITION ) ONELOOPLINE
Rule 96    WHILEX -> WHILE ( CONDITION ) LOOPBLOCK
Rule 97    FORX -> FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
Rule 98    FORX -> FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
Rule 99    CONDITION -> EXPRESSION EQUAL EXPRESSION
Rule 100   CONDITION -> EXPRESSION UNEQUAL EXPRESSION
Rule 101   CONDITION -> EXPRESSION LESSEQUAL EXPRESSION
Rule 102   CONDITION -> EXPRESSION GREATEREQUAL EXPRESSION
Rule 103   CONDITION -> EXPRESSION > EXPRESSION
Rule 104   CONDITION -> EXPRESSION < EXPRESSION
Rule 105   PRINTX -> PRINT PRINTMANY
Rule 106   PRINTMANY -> STRINGX , PRINTMANY
Rule 107   PRINTMANY -> EXPRESSION , PRINTMANY
Rule 108   PRINTMANY -> STRINGX
Rule 109   PRINTMANY -> EXPRESSION
Rule 110   STRINGX -> STRING
Rule 111   RETURNX -> RETURN EXPRESSION
Rule 112   EXPRESSION -> NUMBER
Rule 113   EXPRESSION -> FLOATNUMBER
Rule 114   EXPRESSION -> ID
Rule 115   EXPRESSION -> EXPRESSION + EXPRESSION
Rule 116   EXPRESSION -> EXPRESSION - EXPRESSION
Rule 117   EXPRESSION -> EXPRESSION * EXPRESSION
Rule 118   EXPRESSION -> EXPRESSION / EXPRESSION
Rule 119   EXPRESSION -> ( EXPRESSION )
Rule 120   EXPRESSION -> - EXPRESSION

Terminals, with rules where they appear

'                    : 60
(                    : 43 44 45 62 63 64 65 66 67 89 90 91 92 93 94 95 96 119
)                    : 43 44 45 62 63 64 65 66 67 89 90 91 92 93 94 95 96 119
*                    : 117
+                    : 115
,                    : 22 27 32 37 42 51 54 106 107
-                    : 116 120
/                    : 118
:                    : 97 98
;                    : 2 6 7 10 14 15 68 71 72 76 77 78 81 82 84 85
<                    : 104
=                    : 18 19 20 21 22 97 98
>                    : 103
ADDASSIGN            : 23 24 25 26 27
BREAK                : 86
COMMENT              : 
CONTINUE             : 87
DIVASSIGN            : 38 39 40 41 42
DOTADD               : 56
DOTDIV               : 59
DOTMUL               : 58
DOTSUB               : 57
ELSE                 : 64 65 66 67 91 92 93 94
EQUAL                : 99
EYE                  : 45
FLOATNUMBER          : 113
FOR                  : 97 98
GREATEREQUAL         : 102
ID                   : 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 97 98 114
IF                   : 62 63 64 65 66 67 89 90 91 92 93 94
IFS                  : 
LESSEQUAL            : 101
MULASSIGN            : 33 34 35 36 37
NUMBER               : 112
ONES                 : 44
PRINT                : 105
RETURN               : 111
STRING               : 110
SUBASSIGN            : 28 29 30 31 32
UNEQUAL              : 100
WHILE                : 95 96
ZEROS                : 43
[                    : 21 22 26 27 31 32 36 37 41 42 46 53
]                    : 21 22 26 27 31 32 36 37 41 42 46 53
error                : 
{                    : 16 88
}                    : 16 88

Nonterminals, with rules where they appear

BLOCK                : 8 63 65 66 67 67
BREAKX               : 76 84
CONDITION            : 62 63 64 65 66 67 89 90 91 92 93 94 95 96
CONTINUEX            : 77 85
EMPTY                : 9 61 74
EXPRESSION           : 18 21 21 22 22 22 23 26 26 27 27 27 28 31 31 32 32 32 33 36 36 37 37 37 38 41 41 42 42 42 43 44 45 54 55 56 57 58 59 60 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 107 109 111 115 115 116 116 117 117 118 118 119 120
EYEX                 : 50
FORX                 : 5 13 70 80
IDX                  : 2 10 68 78
IFX                  : 3 11
LINE                 : 1 2 3 4 5 6 7 8 16
LOOPBLOCK            : 73 90 92 93 94 94 96 98
LOOPIFX              : 75 83
LOOPLINE             : 68 69 70 71 72 73 75 76 77 88
MATRIX               : 19 24 29 34 39
MATRIXEXPR           : 47 56 57 58 59
MATRIXINSIDE         : 46 51
ONELINE              : 62 64 64 65 66
ONELOOPLINE          : 89 91 91 92 93 95 97
ONESX                : 49
PRINTMANY            : 105 106 107
PRINTX               : 7 15 72 82
RETURNX              : 6 14 71 81
STRINGX              : 106 108
TABLE                : 20 25 30 35 40 51 52
VALUES               : 53 54
WHILEX               : 4 12 69 79
ZEROSX               : 48
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID ADDASSIGN MATRIX
    (25) IDX -> . ID ADDASSIGN TABLE
    (26) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (27) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (28) IDX -> . ID SUBASSIGN EXPRESSION
    (29) IDX -> . ID SUBASSIGN MATRIX
    (30) IDX -> . ID SUBASSIGN TABLE
    (31) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (32) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (33) IDX -> . ID MULASSIGN EXPRESSION
    (34) IDX -> . ID MULASSIGN MATRIX
    (35) IDX -> . ID MULASSIGN TABLE
    (36) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (37) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (38) IDX -> . ID DIVASSIGN EXPRESSION
    (39) IDX -> . ID DIVASSIGN MATRIX
    (40) IDX -> . ID DIVASSIGN TABLE
    (41) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (42) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (62) IFX -> . IF ( CONDITION ) ONELINE
    (63) IFX -> . IF ( CONDITION ) BLOCK
    (64) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (65) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (66) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (67) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (95) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (96) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (97) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (98) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (111) RETURNX -> . RETURN EXPRESSION
    (105) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)

    start                          shift and go to state 1
    LINE                           shift and go to state 2
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 1

    (0) S' -> start .



state 2

    (1) start -> LINE .

    $end            reduce using rule 1 (start -> LINE .)


state 3

    (2) LINE -> IDX . ; LINE

    ;               shift and go to state 18


state 4

    (3) LINE -> IFX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID ADDASSIGN MATRIX
    (25) IDX -> . ID ADDASSIGN TABLE
    (26) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (27) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (28) IDX -> . ID SUBASSIGN EXPRESSION
    (29) IDX -> . ID SUBASSIGN MATRIX
    (30) IDX -> . ID SUBASSIGN TABLE
    (31) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (32) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (33) IDX -> . ID MULASSIGN EXPRESSION
    (34) IDX -> . ID MULASSIGN MATRIX
    (35) IDX -> . ID MULASSIGN TABLE
    (36) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (37) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (38) IDX -> . ID DIVASSIGN EXPRESSION
    (39) IDX -> . ID DIVASSIGN MATRIX
    (40) IDX -> . ID DIVASSIGN TABLE
    (41) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (42) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (62) IFX -> . IF ( CONDITION ) ONELINE
    (63) IFX -> . IF ( CONDITION ) BLOCK
    (64) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (65) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (66) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (67) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (95) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (96) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (97) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (98) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (111) RETURNX -> . RETURN EXPRESSION
    (105) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .

    ID              shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    {               shift and go to state 17
    $end            reduce using rule 17 (EMPTY -> .)
    }               reduce using rule 17 (EMPTY -> .)

    IFX                            shift and go to state 4
    LINE                           shift and go to state 19
    IDX                            shift and go to state 3
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    BLOCK                          shift and go to state 9
    EMPTY                          shift and go to state 10

state 5

    (4) LINE -> WHILEX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . BLOCK LINE
    (9) LINE -> . EMPTY
    (18) IDX -> . ID = EXPRESSION
    (19) IDX -> . ID = MATRIX
    (20) IDX -> . ID = TABLE
    (21) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (22) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (23) IDX -> . ID ADDASSIGN EXPRESSION
    (24) IDX -> . ID ADDASSIGN MATRIX
    (25) IDX -> . ID ADDASSIGN TABLE
    (26) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (27) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (28) IDX -> . ID SUBASSIGN EXPRESSION
    (29) IDX -> . ID SUBASSIGN MATRIX
    (30) IDX -> . ID SUBASSIGN TABLE
    (31) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (32) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (33) IDX -> . ID MULASSIGN EXPRESSION
    (34) IDX -> . ID MULASSIGN MATRIX
    (35) IDX -> . ID MULASSIGN TABLE
    (36) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (37) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (38) IDX -> . ID DIVASSIGN EXPRESSION
    (39) IDX -> . ID DIVASSIGN MATRIX
    (40) IDX -> . ID DIVASSIGN TABLE
    (41) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (42) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (62) IFX -> . IF ( CONDITION ) ONELINE
    (63) IFX -> . IF ( CONDITION ) BLOCK
    (64) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (65) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (66) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (67) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (95) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (96) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (97) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (98) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (111) RETURNX -> . RETURN EXPRESSION
    (105) PRINTX -> . PRINT PRINTMANY
    (16) BLOCK -> . { LINE }
    (17) EMPTY -> .
